solved name overflow problem.

--- a/15puzzle/src/App.css
+++ b/15puzzle/src/App.css
@@ -208,7 +208,9 @@ table {
   border-collapse: collapse;
   margin-top: 20px;
   color: #000000;
+  table-layout: fixed;
 }
+
 
 thead {
   color: #000000;
@@ -223,6 +225,12 @@ thead th, tbody td {
 
 tbody {
   border-top: 2px solid #000000; /* Add a border at the top of tbody */
+}
+tbody td:nth-child(2) {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 10ch; 
+  white-space: pre-line;
 }
 
 tbody tr {
